# py_webauthn

./: CHANGELOG.md  pyproject.toml  requirements.txt
tests/: test_generate_registration_options.py  test_map_tpm_manufacturer_id.py  test_validate_certificate_chain.py  test_verify_authentication_response.py  test_verify_authentication_response_pqc.py  test_verify_registration_response.py  test_verify_registration_response_android_key.py
webauthn/: __init__.py
webauthn/helpers/: decoded_public_key_to_cryptography.py  encode_cbor.py  exceptions.py  known_root_certs.py  parse_attestation_object.py  parse_authentication_credential_json.py  parse_authentication_options_json.py  parse_cbor.py  parse_registration_credential_json.py  parse_registration_options_json.py  validate_certificate_chain.py  verify_signature.py
webauthn/registration/: generate_registration_options.py  verify_registration_response.py
webauthn/registration/formats/: android_key.py  android_safetynet.py
