[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webauthn"
dynamic = ["version"]
description = "Pythonic WebAuthn"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["webauthn", "fido2"]
authors = [{ name = "Duo Labs", email = "labs@duo.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "pyasn1>=0.6.2",
    "pyasn1-modules>=0.4.2",
    "cbor2>=5.6.5,<6.0.0",
    "cryptography>=49.0.0",
    "pyOpenSSL>=26.3.0",
]

[project.urls]
Homepage = "https://github.com/duo-labs/py_webauthn"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["webauthn", "webauthn.*"]

[tool.setuptools.package-data]
webauthn = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "webauthn.__version__" }

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pyflakes>=3.4.0",
]
